app/assets/stylesheets/zammad.scss
/* ... */
.searchableSelect {
  position: relative;

  .form-control {
    padding-right: 37px;

    @include bidi-style(padding-right, 37px, padding-left, 12px);
  }

  .searchableSelect-main {
    position: relative;
    line-height: 19px;

    &--with-clear-button {
      padding-right: 60px;

      @include bidi-style(padding-right, 60px, padding-left, 12px);
    }

    &.form-control--small ~ .searchableSelect-autocomplete {
      top: 6px;
      left: 9px;
    }
  }

  .searchableSelect-shadow {
    position: absolute;

    @include bidi-style(left, -9999px, right, -9999px);
  }

  .dropdown-menu {
    margin-top: -3px;
    max-width: 100%;
  }

  &-option-text {
    flex: 1 1 0%;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    display: block;

    & + .icon {
      @include bidi-style(margin-left, 10px, margin-right, 0);
    }

    &.is-inactive {
      opacity: 0.33;
      cursor: not-allowed;
    }
  }

  &-option-button {
    display: flex;
    flex: 1 1 0%;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    padding: 11px 15px;
    cursor: pointer;

    &:hover {
      background: var(--supergood-color);
    }

    &:hover .recipientList-arrow {
      opacity: 1;
    }
  }

  &.dropdown li {
    &.has-inactive {
      cursor: unset;
    }

    &.is-selected {
      @include bidi-style(
        border-left,
        5px solid var(--highlight),
        border-right,
        5px solid var(--highlight)
      );
    }

    &.js-enter:hover,
    &.js-enter.is-active {
      background: none;

      + li {
        box-shadow: 0 1px rgba(255, 255, 255, 0.13) inset;
      }
    }

    &.js-enter.is-highlighted {
      span.searchableSelect-option-text {
        background: var(--highlight);
      }
    }

    &.js-back:hover,
    &.js-back.is-active {
      background: var(--supergood-color);

      .icon-arrow-left,
      .icon-arrow-right {
        opacity: 1;
      }
    }

    &.inactive-with-children:hover,
    &.inactive-with-children.is-active {
      background: var(--supergood-color);

      .icon-arrow-left,
      .icon-arrow-right {
        opacity: 1;
      }
    }

    &.is-hidden {
      display: none;
    }

    &.js-enter {
      padding: 0;

      span.searchableSelect-option-text {
        padding: 11px 15px;
      }

      span.searchableSelect-option-arrow {
        padding: 11px 15px;
        cursor: pointer;

        @include bidi-style(border-left, 1px solid rgba(255, 255, 255, 0.13), border-right, none);

        svg {
          vertical-align: middle;
          transform: translateY(-1px); // 1px off towards center line height?
        }

        &:hover {
          background: var(--supergood-color);

          .recipientList-arrow {
            opacity: 1;
          }
        }
      }
    }

    span.searchableSelect-option-text {
      letter-spacing: -0.02rem;

      &:hover {
        background: var(--highlight);
      }
    }
  }

  li:not(.is-active):hover + li {
    box-shadow: 0 1px rgba(255, 255, 255, 0.13) inset;
  }

  .searchableSelect-autocomplete {
    position: absolute;
    left: 13px;
    top: 11px;
    right: 37px;
    white-space: nowrap;
    overflow: hidden;
    display: flex;
    pointer-events: none;
    white-space: pre;
    line-height: 19px;
  }

  .searchableSelect-autocomplete-invisible {
    color: transparent;
  }

  .searchableSelect-autocomplete-visible {
    color: hsl(0, 0%, 33%);
    background: hsl(201, 61%, 90%);
  }

  .loading.icon {
    position: absolute;
    right: 11px;
    top: 11px;
    display: none;
  }

  &.is-loading {
    .loading.icon {
      display: block;
    }

    .icon-arrow-down {
      display: none;
    }
  }
}

.action {
  background: var(--background-secondary);
  border: 1px solid var(--border);
  box-shadow: var(--elevation-stroke);
  display: flex;
  flex-wrap: wrap;
  padding: 10px;
  margin-bottom: 17px;

  &.is-inactive {
    background: none;
    box-shadow: none;
    position: relative;
    top: 2px;
    border-color: var(--border-alt);

    & > *:not(.action-controls) {
      opacity: 0.33;
    }
  }

  &--placeholder {
    padding: 30px;
    align-items: center;
    justify-content: center;
    color: hsl(206, 9%, 69%);
    box-shadow: none;
    background: none;
    border-style: dashed;
    font-style: italic;
  }

  &-alert {
    width: calc(100% + 20px);
    margin: -10px -10px 10px;
  }

  &-flow {
    display: flex;
    flex-wrap: wrap;

    &.action-flow--noWrap {
      flex-wrap: nowrap;
    }

    &.action-flow--row {
      flex-basis: 100%;
    }

    &.action-flow--vertically-centered {
      align-items: center;
    }
  }

  &-separator {
    width: 1px;
    background: hsl(0, 0%, 97%);
    margin: 0 10px;
  }

  .table {
    margin-left: -9px;
    margin-right: -9px;
  }

  h2 {
    margin-bottom: 0;

    .action-form-status .icon {
      margin-top: 0;
    }
  }

  &-block,
  &-controls,
  &-row {
    padding: 10px;

    h2:first-child,
    h3:first-child {
      margin-top: 0;
    }
  }

  &-block {
    &.action-block--flex {
      flex: 1;
    }
  }

  &-row {
    flex-basis: 100%;
  }

  h3 {
    color: var(--text-muted);
    margin-top: 0;

    + .btn--text {
      position: relative;
      top: -1px;
    }
  }

  &-label {
    background: var(--background-primary-alt);
    border: 1px solid var(--border-alt);
    align-self: flex-start;
    padding: 5px 10px;
    margin: -4px 0 -5px auto;

    @include rtl(margin, -4px auto -5px 0);

    color: var(--text-muted-alt);
    cursor: default;
  }

  &-flow-icon {
    width: 15px;
    height: 24px;
    margin-top: 16px; /* compensate for h3 height */
    margin-left: 20px;
    margin-right: 20px;
  }

  &-controls {
    display: flex;

    @include bidi-style(margin-left, auto, margin-right, 0);

    align-self: flex-end;

    .btn {
      align-self: center;
    }
  }
}
/* ... */

